source/css/_partial/jumbotron.scss
@media (max-width:1250px) {
    .bg-video {
        margin-left: calc(50vw - 625px);
    }
}
.jumbotron {
    background-image: url(/images/jumbotron-bg.jpg);
    background-size: cover;
    background-position: center 28%;
    display: flex;
    position: relative;
    box-sizing: border-box;
    width: 100%;
    background-color: #000;
    height: 520px;
    overflow: hidden;
    .bg-video {
        background-size: cover;
        background-position: center 20%;
        margin-top: -50px!important;
        z-index: 4;
        position: absolute;
        display: block;
        width:100%;
        min-width: 1250px;
        height: 130%;
        top: 0;
        overflow: hidden;
        // transition: all .218s;
        iframe {
            opacity: .5;
            position: absolute;
            z-index: 5;
            margin: 0;
            width: 100%;
            height: 100%;
            pointer-events: none;
        }
        #toggle {
            z-index: 6;
            position: absolute;
            top: 20px;
            right: 30px;
            color: white;
            display: none;
            font-size: 30px;
            cursor: pointer;
            text-shadow: 0 0 2px rgba(0,0,0,.8);
        }
    }
    .jumbotron-wrap {
        position: relative;
        z-index: 5;
        width: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        transform-origin: top center;
        align-self: center;
    }
    .speakers-bar {
        .speaker-photo {
        }
    }
    .conf-logo {
        margin: auto;
        margin-top: 100px;
        height: 50px;
        display: none;
    }
    .conf-title {
        font-family: $Avenir-Next;
        text-align: center;
        color: white;
        font-weight: 600;
        text-shadow: rgba(0, 0, 0, 0.4) 0px 4px 5px;
        transform: scale(1.2);
        .conf-name {
            font-size: 50px;
            line-height: 34px;
            letter-spacing: -1px;
            text-transform: uppercase;
        }
        .conf-nd {
            font-size: 35px;
            display: block;
            font-weight: 600;
            text-transform: uppercase;
        }
    }
    .conf-theme {
        font-family: $Avenir-Next;
        color: white;
        font-size: 27px;
        font-weight: 600;
        margin-top: 35px;
        width: 700px;
        text-align: center;
        text-shadow: rgba(0, 0, 0, 0.3) 0px 4px 3px;
    }
    .conf-info {
        font-family: $Avenir-Next;
        font-size: 18px;
        text-align: center;
        font-weight: 400;
        color: white;
        text-shadow: rgba(0, 0, 0, 0.4) 0px 4px 3px;
        * {
            display: inline;
        }
    }
    .buttons {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        width: 432px;
        height: 45px;
        margin-top: 35px;
        .button {
            display: inline-block;
            width: 204px;
            box-sizing: border-box;
        }
        .register-button {
            background-color: #0070E8;
            color: white;
            letter-spacing: 1.01px;
        }
        .video-button {
            background-color: white;
            font-weight: 600;
            letter-spacing: .6px;
            color: #0070E8;
            cursor: pointer;
            &.mobile {
                display: none;
            }
        }
    }
}

.intro-video {
    width: 1250px;
    margin: auto;
    .video-heading {
        display: block;
        font-weight: bold;
        width: 1250px;
        margin: auto;
        margin-top: 25px;
        font-size: 20px;
        text-align: center;
    }
}

#bgPlayer {
    opacity: 1;
    display: block;
    width: 100%;
    height: 100%;
    background: #000;
}

a.close-modal {
    font-family: $Avenir-Next;
    background: url(/images/close-button.png) no-repeat 0 0!important;
    background-size: 100% 100%!important;
    transform: scale(1.5);
    left: 40%!important;
    bottom: -50px!important;
    top: auto!important;
    text-indent: 40px!important;
    color: white;
    line-height: 32px;
    font-size: 20px;
    font-weight: 600;
    text-shadow: 0 0 5px rgba(0, 0, 0, 0.9);}

